@@ -1,6 +1,6 @@
 {- git-annex command
  -
- - Copyright 2013-2019 Joey Hess <id@joeyh.name>
+ - Copyright 2013-2020 Joey Hess <id@joeyh.name>
  -
  - Licensed under the GNU AGPL version 3 or higher.
  -}
@@ -25,6 +25,7 @@ import Config
 import Config.DynamicConfig
 import Types.GitConfig
 import Types.ProposedAccepted
+import Git.Config
 
 import qualified Data.Map as M
 
@@ -86,10 +87,10 @@ startSpecialRemote name config (Just (u, c, mcu)) =
 performSpecialRemote :: RemoteType -> UUID -> R.RemoteConfig -> R.RemoteConfig -> RemoteGitConfig -> Maybe (SpecialRemote.ConfigFrom UUID) -> CommandPerform
 performSpecialRemote t u oldc c gc mcu = do
 	(c', u') <- R.setup t (R.Enable oldc) (Just u) Nothing c gc
-	next $ cleanupSpecialRemote u' c' mcu
+	next $ cleanupSpecialRemote t u' c' mcu
 
-cleanupSpecialRemote :: UUID -> R.RemoteConfig -> Maybe (SpecialRemote.ConfigFrom UUID) -> CommandCleanup
-cleanupSpecialRemote u c mcu = do
+cleanupSpecialRemote :: RemoteType -> UUID -> R.RemoteConfig -> Maybe (SpecialRemote.ConfigFrom UUID) -> CommandCleanup
+cleanupSpecialRemote t u c mcu = do
 	case mcu of
 		Nothing -> 
 			Logs.Remote.configSet u c
@@ -101,6 +102,8 @@ cleanupSpecialRemote u c mcu = do
 		Just r -> do
 			repo <- R.getRepo r
 			setRemoteIgnore repo False
+	unless (Remote.gitSyncableRemoteType t) $
+		setConfig (remoteConfig c "skipFetchAll") (boolConfig True)
 	return True
 
 unknownNameError :: String -> Annex a
