@@ -2,6 +2,9 @@ git-annex (7.20200220) UNRELEASED; urgency=medium
 
   * Bugfix: export --tracking (a deprecated option) set 
     annex-annex-tracking-branch, instead of annex-tracking-branch.
+  * initremote, enableremote: Set remote.name.skipFetchAll when
+    the remote cannot be fetched from by git, so git fetch --all
+    will not try to use it.
 
  -- Joey Hess <id@joeyh.name>  Wed, 19 Feb 2020 12:48:58 -0400
 
